tests/tc/pos/recty02.js

/*@ foo :: forall A . (x:list[A]) => list[A] */
function foo(l) {
  return l;
}
