tests/tc/neg/recty02.js

/*@ foo :: forall A . (x:list[A]) => list[int] */
function foo(l) {
  return l;
}
